--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -29,17 +29,17 @@ security:
                 # where to redirect after logout
                 # target: app_any_route
 
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#firewalls-authentication
 
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
+            remember_me:
+                secret:   '%kernel.secret%'
+                lifetime: 604800 # 1 week in seconds
+                path:     /
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/doctor, roles: [IS_AUTHENTICATED_FULLY, ROLE_DOCTOR] }
-        - { path: ^/expert, roles: [IS_AUTHENTICATED_FULLY, ROLE_EXPERT] }
+        - { path: ^/doctor, roles: ROLE_DOCTOR }
+        - { path: ^/expert, roles: ROLE_EXPERT }
         - { path: ^/logout, roles: IS_AUTHENTICATED_FULLY }
         - { path: ^/, roles: IS_AUTHENTICATED_FULLY }
